# herenowcli

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: release.yml
docs/: architecture.md
src/: cli.rs  config.rs  confirm.rs  error.rs  files.rs  http.rs  main.rs  output.rs  state.rs
src/api/: auth.rs  domains.rs  drives.rs  mod.rs  models.rs  sites.rs  variables.rs  wallet.rs
