[package]
name = "herenow"
version = "0.1.0"
edition = "2021"
description = "Command-line client for the here.now Sites and Drives API"
license = "MIT"

[[bin]]
name = "herenow"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
bytes = "1.6"
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "5.0"
futures = "0.3"
mime_guess = "2.0"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.38", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
urlencoding = "2.1"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.10"
